package solid.singleresponsibility.badexample;

public class Employee {

    /**
     * calculate monthly payment of this employee
     */
    public MoneyAmount calculateMonthlyPay(){
        // some implementation;
        return null;
    }


    /**
     * create a report of hours worked
     * @return
     */
    public Report reportHours(){
        return null;
    }

    /**
     * save all current information of this employee.
     */
    public void save(){

    }


}
