package solid.singleresponsibility.solution;

import solid.singleresponsibility.badexample.Report;

public class HourReporter {
    private EmployeeData data;

    /**
     * create a report of hours worked
     * @return
     */
    public Report reportHours(){return null;}

}
