package solid.singleresponsibility.solution;

import solid.singleresponsibility.badexample.MoneyAmount;

public class PayCalculator {
    private EmployeeData data;

    public MoneyAmount calculateMonthlyPay(){
        // some implementation;
        return null;
    }

}
