@startuml

title __SOLIDEXAMPLES's Class Diagram__\n

  namespace solid.singleresponsibility {
    class solid.singleresponsibility.Employee {
    }
  }
  

  namespace solid.singleresponsibility {
    namespace solution {
      class solid.singleresponsibility.solution.EmployeeData {
      }
    }
  }
  

  namespace solid.singleresponsibility {
    namespace solution {
      class solid.singleresponsibility.solution.EmployeeSaver {
      }
    }
  }
  

  namespace solid.singleresponsibility {
    namespace solution {
      class solid.singleresponsibility.solution.HourReporter {
      }
    }
  }
  

  namespace solid.singleresponsibility {
    namespace solution {
      class solid.singleresponsibility.solution.PayCalculator {
      }
    }
  }
  

  solid.singleresponsibility.solution.EmployeeSaver o-- solid.singleresponsibility.solution.EmployeeData : data
  solid.singleresponsibility.solution.HourReporter o-- solid.singleresponsibility.solution.EmployeeData : data
  solid.singleresponsibility.solution.PayCalculator o-- solid.singleresponsibility.solution.EmployeeData : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
